[gd_scene load_steps=10 format=3 uid="uid://bvl1extcu4sl7"]

[ext_resource type="Script" uid="uid://dh5ghht1a7pag" path="res://WorldTemplate.gd" id="1_bah7m"]
[ext_resource type="PackedScene" uid="uid://cja6qvu0io7au" path="res://player.tscn" id="2_bcbcq"]
[ext_resource type="Script" uid="uid://onbw7darvgo3" path="res://PlayerMovementData.gd" id="3_bcbcq"]
[ext_resource type="PackedScene" uid="uid://ceve7wtyhg1hu" path="res://level_completed.tscn" id="6_wygdx"]
[ext_resource type="PackedScene" uid="uid://bcevi3lo2bptp" path="res://tile_map.tscn" id="7_wygdx"]

[sub_resource type="Resource" id="Resource_js7pq"]
script = ExtResource("3_bcbcq")
speed = 100.0
acceleration = 800.0
friction = 1000.0
jump_velocity = -250.0
gravity_scale = 1.0
air_resistance = 200.0
air_acceleration = 400.0
metadata/_custom_type_script = "uid://onbw7darvgo3"

[sub_resource type="Animation" id="Animation_mmc0l"]
length = 3.2

[sub_resource type="Animation" id="Animation_tvydr"]
resource_name = "countdown"
length = 3.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwhj1"]
_data = {
&"RESET": SubResource("Animation_mmc0l"),
&"countdown": SubResource("Animation_tvydr")
}

[node name="World" type="Node2D"]
script = ExtResource("1_bah7m")
metadata/_edit_vertical_guides_ = [55.0]

[node name="Player" parent="." instance=ExtResource("2_bcbcq")]
position = Vector2(-0.0603647, 0.181093)
movement_data = SubResource("Resource_js7pq")

[node name="TileMap" parent="." instance=ExtResource("7_wygdx")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("6_wygdx")]
visible = false

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/LevelCompleted"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LevelCompleted/CenterContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/LevelCompleted/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Level Completed!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelCompleted/CenterContainer2/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CanvasLayer/LevelCompleted/CenterContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RETRY"

[node name="NextLevelButton" type="Button" parent="CanvasLayer/LevelCompleted/CenterContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "NEXT LEVEL"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_right = 2.0
offset_bottom = 16.0
grow_horizontal = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer/CenterContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(29.315, 8.73)
layout_mode = 2
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_hwhj1")
}

[connection signal="next_level" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_next_level"]
[connection signal="retry" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_retry"]
[connection signal="pressed" from="CanvasLayer/LevelCompleted/CenterContainer2/VBoxContainer/HBoxContainer/RetryButton" to="CanvasLayer/LevelCompleted" method="_on_retry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelCompleted/CenterContainer2/VBoxContainer/HBoxContainer/NextLevelButton" to="CanvasLayer/LevelCompleted" method="_on_next_level_button_pressed"]
